# autoware

./: .gitignore  README.md  run.sh
config/: fastdds_udp.xml  roii_sensor_spec.yaml  sensor_mapping_lidar_only.yaml  sensor_mapping_roii_4lidar.yaml  sensor_mapping_roii_lidar_high.yaml  sensor_mapping_roii_lidar_low.yaml  sensor_mapping_roii_lidar_mid.yaml
container_patches/: autoware_carla_interface.launch.xml  autoware_no_camera.rviz  carla_ros.py  carla_wrapper.py  pointcloud_preprocessor_4lidar.launch.py  pointcloud_preprocessor_roii.launch.py  roii_clean.rviz  roii_vehicle.dae  sensor_kit.xacro  sensor_kit_calibration.yaml  sensor_kit_calibration_roii.yaml  sensor_kit_roii.xacro
desktop/: Autoware-CARLA.desktop  Tablet-Gateway.desktop
docs/: autoware.md  autoware_carla_integration.md  carla_live_setup.md  roii_lidar_carla_autoware.md  ros2-jazzy.md  town_test_results.md
launch/: README.md  carla_bringup.launch.py
ros/: README.md  carla_ws_gateway.py  diag_connectivity.py  diag_route.py  diag_route_life.py  drive_monitor.py  find_spawn.py  multimode_supervisor.py  objects_lite.json  objects_roii_lidar_high.json  objects_roii_lidar_low.json  objects_roii_lidar_mid.json  perception_stub.py  roii_lidar_fault_injector.py  roii_lidar_health_monitor.py  ros_ws_gateway.py  traj_smoke.py
rviz/: roii_lidar_fault.rviz
rviz_plugins/roii_sensor_fault_panel/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_plugins/roii_sensor_fault_panel/include/roii_sensor_fault_panel/: roii_sensor_fault_panel.hpp
rviz_plugins/roii_sensor_fault_panel/src/: roii_sensor_fault_panel.cpp
scripts/: build_roii_rviz_panel.sh  check_roii_lidar.sh  download_carla_maps.sh  gen_all_spawns.sh  gen_spawn_table.py  (+16 more)
(+102 files in other folders)
